# astrosnippets

./: README.md  pyproject.toml
LICENSES/: BSD-3-Clause-Paul-Tol.txt
astrosnippets/: __init__.py  colorschemes.py  setFigureConfig.py
