[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrosnippets"
version = "0.1.0"
description = "Small python snippets for constants and plotting"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib", "numpy"
]

[tool.setuptools.packages.find]
where = ["."]
